# shanghai

./: .gitignore  ALL_BUILD.vcxproj  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  generator.vcxproj  shanghai.sln  sorter.vcxproj  tests.vcxproj
common/: Clock.h  Utils.h
generator/: generator.cpp
sorter/: FileReader.h  FileRegistry.h  FileWriter.h  InitialSorter.h  Merger.h  SortingEntry.h  Utils.h  sorter.cpp  sorter.cpp.autosave
tests/: tests.cpp
